# editor

./: .clang-format  .gitmodules  App.cpp  App.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandManager.cpp  CommandManager.h  Commands.cpp  Defines.h  GapBuffer.cpp  GapBuffer.h  Makefile  Manager.cpp  Manager.h  RenderContext.h  UTFHelpers.cpp  UTFHelpers.h  Window.cpp  Window.h  defines.h  main.cpp  readme.md
